# torus-cycle-renderer

./: .gitignore  README.md  pyproject.toml
docs/: CLOSURE_CHARGE_CHIRALITY_COMPATIBILITY_V1.md  CLOSURE_COMPLEMENT_PROJECTION_DERIVATION_V1.md  CODE_GUIDE.md  COMPOSITE_CLOSURE_ALGEBRA_V1.md  CONSTRAINED_TORUS_TO_EM_PROJECTOR_ANSATZ.md  COUPLED_QUARK_GLUON_WEAK_CLOSURE_ALGEBRA.md  DERIVATION_VALIDATION_AGAINST_IMPLEMENTATION.md  DOWN_GLUON_RENDER_FOUNDATION.md  EFFECTIVE_CHARGE_PROJECTION_ANSATZ_V1.md  ELECTRON_STEADY_STATE_EXAMPLE.md  ELECTRON_STRUCTURE.md  EM_CALIBRATION_STRATEGY.md  EM_FAR_FIELD_AND_MULTIPOLE_CONSEQUENCES.md  EM_PROJECTOR_STATUS_MAP.md  EM_RATE_AND_LINEWIDTH_ANSATZ.md  EM_SELECTION_RULES_FROM_RESONANT_ATTRACTORS.md  FULL_WAVE_EQUATION_DERIVATION.md  GLUON_COMPENSATION_TERM_ANSATZ.md  INTRODUCTION.md  LOCAL_COHERENCE_FUNCTIONAL_FOR_PROJECTOR_V1.md  MODELING_SCOPE_AND_INTERPRETATION.md  NATURAL_EMERGENCE_OF_INCOMPLETE_QUARK_CYCLES.md  PHOTON_BRANCH_FOUNDATION.md  QUARK_DERIVATION_CHAIN_INDEX.md  QUARK_GLUON_SIGN_AND_CLOSURE_INTERPRETATION.md  RADIATIVE_BRANCH_AND_ATTRACTOR_QUANTIZATION.md  RENDERING_BACKENDS.md  RESONANT_LOOP_DERIVATION.md  SIGN_ARCHITECTURE_AND_INTERPRETATION.md  TOY_PROJECTOR_FOR_CLOSURE_COMPLEMENT_V1.md  TOY_TORUS_SURFACE_PROJECTOR_V1.md  TRANSPORT_CURRENT_IMAGE_ANSATZ.md  UP_QUARK_RENDER_FOUNDATION.md  UUD_TRIANGLE_SCENE_FOUNDATION.md  WEAK_BOSON_WPLUS_CLASS_FOUNDATION.md  WMINUS_BRANCH_FOUNDATION.md  ZBOSON_BRANCH_FOUNDATION.md
scripts/: render_cycle.py  render_frame.py  render_uud_triangle.py
tests/: test_electron_structure.py  (+4 more)
(+30 files in other folders)
