[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torus-cycle-renderer"
version = "0.1.0"
description = "Fresh-start torus cycle renderer with particle/render separation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "matplotlib>=3.8",
  "scipy>=1.12",
  "imageio>=2.36",
  "plotly>=5.24",
  "kaleido>=0.2.1",
]

[project.optional-dependencies]
pyvista = [
  "pyvista>=0.44",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
render-frame = "torus_cycle_renderer.cli:render_frame_main"
render-cycle = "torus_cycle_renderer.cli:render_cycle_main"
